<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_item_cover"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/desc_cover_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/tv_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_score"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/item_value"
            app:layout_constraintBottom_toBottomOf="@+id/tv_score_title"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            app:layout_constraintTop_toTopOf="@+id/tv_score_title" />

        <ImageView
            android:id="@+id/iv_score_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/desc_score_star"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/tv_score_value"
            app:layout_constraintStart_toEndOf="@+id/tv_score_value"
            app:layout_constraintTop_toTopOf="@+id/tv_score_value" />

        <TextView
            android:id="@+id/tv_rank_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_rank"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_title" />

        <TextView
            android:id="@+id/tv_rank_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/item_value"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rank_title"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            app:layout_constraintTop_toTopOf="@+id/tv_rank_title" />

        <TextView
            android:id="@+id/tv_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_rank_title"
            tools:text="@string/title_episode" />

        <TextView
            android:id="@+id/tv_content_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            android:text="@string/item_value"
            app:layout_constraintTop_toTopOf="@+id/tv_content_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_title" />

        <TextView
            android:id="@+id/tv_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_status"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_item_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_content_title" />

        <TextView
            android:id="@+id/tv_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_value"
            android:layout_marginStart="100dp"
            app:layout_constraintStart_toEndOf="@id/iv_item_cover"
            app:layout_constraintTop_toTopOf="@+id/tv_status_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_status_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>